# ballpool

./: README.md  main.py  mol.py  pyproject.toml  real_gas.py
example/: README.md  gen_movie.py  win00.py  win01.py
src/ballpool/: mov.py  real_gas.py
src/mol_simulation/: main.py  mol.py  real_gas.py
