[project]
name = "ballpool"
version = "0.0.0"
description = "Particle Simulator Software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python","Pillow"
]

[project.urls]
Repository="https://github.com/Tom-game-project/ballpool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
